<resources>
    <string name="app_name">EquiSkill</string>


    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="email">Email</string>
    <string name="password">Password</string>


    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already">Already Have an account? Login Here</string>
    <string name="back_to_sign">Back to sign in</string>
    <string name="otp">OTP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="change_mail">Change Email</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify">Verify OTP</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="set_password">Set Password</string>

    <string name="join">Join Our Community</string>
    <string name="welcome">Welcome back to EquiSkill</string>
    <string name="enter_email">Enter email for OTP</string>

    <string name="forgot">Forgot Password</string>

    <string name="sign_in">Sign in</string>
    <string name="phone">Phone number</string>


</resources>