<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    tools:context=".SignIn.ForgotPasswordActivity">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_upload"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/arrow_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/admin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/image_upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.059"
            app:layout_constraintStart_toEndOf="@+id/image_upload"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/admin_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email for otp"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/admin_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/admin_text"
            app:layout_constraintTop_toBottomOf="@+id/admin_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:padding="10dp">

        <ImageView
            android:id="@+id/sign_in_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/hh"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:id="@+id/app_text"
            app:layout_constraintEnd_toEndOf="@+id/sign_in_img"
            app:layout_constraintStart_toStartOf="@+id/sign_in_img"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_img" />


        <TextView
            android:id="@+id/sign_in_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_email"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_text" />


        <TextView
            android:id="@+id/error_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join"
            android:textColor="@color/red"
            android:visibility="gone"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_info" />




        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_input"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/error_info">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:padding="10dp"
                android:id="@+id/email_in"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/envelope"
                android:drawablePadding="10dp"
                android:background="@drawable/white_border">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/send_otp"
            android:textColor="@color/white"
            android:id="@+id/send_otp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_border"
            app:layout_constraintTop_toBottomOf="@+id/email_input"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>